Deploy changes to QA

--- a/force-app/main/default/lwc/customCaseView/customCaseView.html
+++ b/force-app/main/default/lwc/customCaseView/customCaseView.html
@@ -130,15 +130,15 @@
                         </lightning-output-field>
             </div>
         </div>
-         <div class="slds-grid">
+        <!-- <div class="slds-grid">
             <div class="slds-col slds-size_1-of-2">
                  <lightning-output-field field-name="Reason_for_Early_Relieving_Date__c">
                         </lightning-output-field>
-            </div>
+            </div> 
             <div class="slds-col slds-size_1-of-2">
             
             </div>
-        </div>
+        </div> -->
             </lightning-accordion-section>
             </template>
             <!-----------------Resignation FIELDS----END------------>
