--- a/force-app/main/default/lwc/recentRequestTile/recentRequestTile.html
+++ b/force-app/main/default/lwc/recentRequestTile/recentRequestTile.html
@@ -13,7 +13,7 @@
 				<div class="childtext" style="padding-left:20px;">
 					<div style="padding-left:3px;">
 						<lightning-icon icon-name="action:manage_perm_sets" size="small" alternative-text="Internal"
-							title="Internal"> </lightning-icon>
+							> </lightning-icon>
 						<font size="3"><b> Pending Leave Requests On Me </b> </font>
 					</div>
 				</div>
