--- a/force-app/main/default/lwc/leaveReqViewForm/leaveReqViewForm.html
+++ b/force-app/main/default/lwc/leaveReqViewForm/leaveReqViewForm.html
@@ -1,5 +1,8 @@
 <template>
 	<lightning-card variant="Narrow" title="Leave Request" icon-name="standard:account">
+		<div slot="actions">
+			<lightning-button variant="brand" label="Back" title="titleName" onclick={handleBack}></lightning-button>
+		</div>
 		<lightning-record-view-form record-id={recordId} object-api-name={objectName}>
 			<div class="slds-grid slds-gutters slds-var-m-around_medium">
 				<div class="slds-col slds-size_6-of-12">
@@ -21,10 +24,9 @@
 					<lightning-output-field field-name="EMS_LM_Current_Approver__c"></lightning-output-field>
 					<lightning-output-field field-name="EMS_LM_Remarks__c"></lightning-output-field><br/>
 					<lightning-output-field field-name="EMS_LM_Approved_On__c"></lightning-output-field>
-                    <lightning-output-field field-name="LastModifiedById"></lightning-output-field>
+					<lightning-output-field field-name="LastModifiedById"></lightning-output-field>
 				</div>
 			</div>
 		</lightning-record-view-form>
 	</lightning-card>
-
 </template>
