--- a/force-app/main/default/lwc/serviceRequestLeaveTypesForm/serviceRequestLeaveTypesForm.html
+++ b/force-app/main/default/lwc/serviceRequestLeaveTypesForm/serviceRequestLeaveTypesForm.html
@@ -53,7 +53,7 @@
 								<div class="slds-var-m-around_medium">
 									<lightning-layout multiple-rows>
 										<lightning-layout-item size="6" class="slds-p-around_xx-small">
-											<lightning-input type="Date" label="Start Date" name="startDate"
+											<lightning-input type="Date" label="Start Date" name="startDateCheck"
 												value={startDate} timezone={userTimeZone} onchange={datechange} required>
 											</lightning-input>
 
