Deploy changes to QA

--- a/force-app/main/default/lwc/addCommentButton/addCommentButton.html
+++ b/force-app/main/default/lwc/addCommentButton/addCommentButton.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card>
         <header class="slds-modal__header">
-            <h2 class="slds-text-heading_medium">Please Give Comments</h2>
+            <h2 class="slds-text-heading_medium">Reopening comments</h2>
         </header>
         <!-- <div class="slds-modal__container slds-p-around_medium" id="modal-content-id-1"> -->
             
