--- a/force-app/main/default/lwc/customCaseView/customCaseView.html
+++ b/force-app/main/default/lwc/customCaseView/customCaseView.html
@@ -41,7 +41,7 @@
                         </lightning-output-field>
             </div>
             <div class="slds-col slds-size_1-of-2">
-             <lightning-output-field field-name="Request_Sub_Type__c">
+             <lightning-output-field field-name="Priority">
                 </lightning-output-field>
             </div>
         </div>  
