--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory_AdminView/eMS_LM_LeaveHistory_AdminView.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory_AdminView/eMS_LM_LeaveHistory_AdminView.html
@@ -210,10 +210,15 @@
 				<!-- modal body start -->
 				<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
 					<p style="font-size:20px;">Please enter the approval comments</p><br>
-					<lightning-textarea name="input" value="" placeholder="Type comments here..." label="Comments"
-						maxlength="140" message-when-too-long="A maximum of 140 characters are allowed."
-						message-when-value-missing="Please add comments." onchange={handleApproveAllComments}>
+					<lightning-textarea name="input" required value={approveAllComments}
+						placeholder="Type comments here..." label="Comments" maxlength="140"
+						message-when-too-long="A maximum of 140 characters are allowed."
+						message-when-value-missing="Please add comments." onchange={handleApproveAllComments}
+						class="isRequired" data-id="validateValue">
 					</lightning-textarea>
+					<template if:true={errorMessage}>
+						<div class="slds-text-color_error">{errorMessage}</div>
+					</template>
 				</div>
 
 				<!-- modal footer start-->
@@ -281,10 +286,14 @@
 				<!-- modal body start -->
 				<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-3">
 					<p style="font-size:20px;">Please enter the approval comments</p><br>
-					<lightning-textarea name="input" value="" placeholder="Type comments here..." label="Comments"
-						maxlength="140" message-when-too-long="A maximum of 140 characters are allowed."
+					<lightning-textarea name="input" required value={approveComments}
+						placeholder="Type comments here..." label="Comments" maxlength="140"
+						message-when-too-long="A maximum of 140 characters are allowed."
 						message-when-value-missing="Please add comments." onchange={handleApproveComments}>
 					</lightning-textarea>
+					<template if:true={errorMessage}>
+						<div class="slds-text-color_error">{errorMessage}</div>
+					</template>
 				</div>
 
 				<!-- modal footer start-->
