deploy changes to QA

--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory_AdminView/eMS_LM_LeaveHistory_AdminView.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory_AdminView/eMS_LM_LeaveHistory_AdminView.html
@@ -194,7 +194,6 @@
 			</lightning-card>
 		</template>
 	</lightning-card>
-	<!--disabled={Req.disableButton}-->
 
 	<!-- APPROVE ALL POP-UP-->
 	<template if:true={isShowModalApproveAll}>
@@ -216,9 +215,7 @@
 						message-when-value-missing="Please add comments." onchange={handleApproveAllComments}
 						class="isRequired" data-id="validateValue">
 					</lightning-textarea>
-					<template if:true={errorMessage}>
-						<div class="slds-text-color_error">{errorMessage}</div>
-					</template>
+
 				</div>
 
 				<!-- modal footer start-->
@@ -254,9 +251,7 @@
 						message-when-value-missing="Please add comments." onchange={handleRejectAllComments}
 						class="isRequired" data-id="validateValue">
 					</lightning-textarea>
-					<template if:true={errorMessage}>
-						<div class="slds-text-color_error">{errorMessage}</div>
-					</template>
+
 				</div>
 
 				<!-- modal footer start-->
@@ -289,11 +284,10 @@
 					<lightning-textarea name="input" required value={approveComments}
 						placeholder="Type comments here..." label="Comments" maxlength="140"
 						message-when-too-long="A maximum of 140 characters are allowed."
-						message-when-value-missing="Please add comments." onchange={handleApproveComments}>
+						message-when-value-missing="Please add comments." onchange={handleApproveComments}
+						class="isRequired" data-id="validateValue">
 					</lightning-textarea>
-					<template if:true={errorMessage}>
-						<div class="slds-text-color_error">{errorMessage}</div>
-					</template>
+
 				</div>
 
 				<!-- modal footer start-->
@@ -328,9 +322,7 @@
 						message-when-value-missing="Please add comments." onchange={handleRejectComments}
 						class="isRequired" data-id="validateValue">
 					</lightning-textarea>
-					<template if:true={errorMessage}>
-						<div class="slds-text-color_error">{errorMessage}</div>
-					</template>
+
 				</div>
 				<!-- modal footer start-->
 				<footer class="slds-modal__footer">
