--- a/force-app/main/default/lwc/onboardingProcessForEmployee/onboardingProcessForEmployee.html
+++ b/force-app/main/default/lwc/onboardingProcessForEmployee/onboardingProcessForEmployee.html
@@ -604,7 +604,7 @@
                                             </lightning-input-field>
                                             <lightning-input-field onkeydown={handleAadharNumberKeyDown}
                                                 field-name="Contact_Phone_Number__c" variant="label-stacked"
-                                                disabled={readonlyfield} pattern="[0-9]{10}$"
+                                                disabled={readonlyfield} pattern="[0-9]{10}$" max-length="10"
                                                 message-when-pattern-mismatch="Invalid Contact Number"
                                                 required={contactPhone} class="inputValField">
                                             </lightning-input-field>
